fix: adjust logo height from 40px to 35px for better alignment

--- a/src/spin/dare.module.css
+++ b/src/spin/dare.module.css
@@ -327,7 +327,7 @@
   }
 
   .logo {
-    height: 40px;
+    height: 35px;
   }
 
   .logoContainer {
